--- a/universal-video-downloader/frontend/index.html
+++ b/universal-video-downloader/frontend/index.html
@@ -9,7 +9,7 @@
         content="Premium universal video downloader. Save MP4/MP3 from YouTube, Instagram, Facebook, and Twitter. High speed, no ads.">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
 
     <!-- Styles -->
     <link rel="stylesheet" href="/assets/css/styles.css">
